# LabWork2

./: CMakeLists.txt  game_map.cpp  game_map.h  game_objects.cpp  game_objects.h  main.cpp
